plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.5'
	id 'io.spring.dependency-management' version '1.1.6'
	id 'io.freefair.lombok' version '8.11'
}

group = 'com.AsiaAutmation'
version = '0.0.1-SNAPSHOT'
apply plugin: 'java'
jar {
	manifest {
		attributes(
				'Main-Class': 'com.AsiaAutmation.JournalApp.JournalAppApplication'
		)
	}
}

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(23)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
    implementation "org.springframework.boot:spring-boot-starter-security"
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
//	implementation 'org.mongodb:mongodb-driver-sync:5.2.0'
	implementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo:4.20.0'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-mail:3.4.0'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis:3.4.4'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}

